feat:some changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,15 +49,15 @@
                 <form class="col-lg-6 col-sm-12">
                     <div class="row d-flex ">
                         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                            <input type="text" class="form-control py-2 bg-transparent text-white" placeholder="Your name">
+                            <input type="text" class="form-control bg-transparent text-white contact__input" placeholder="Your name">
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12">
-                            <input type="email" class="form-control py-2 bg-transparent text-white" placeholder="Your email">
+                            <input type="email" class="form-control bg-transparent text-white contact__input" placeholder="Your email">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
-                            <input type="text" class="form-control py-2 bg-transparent text-white" placeholder="Theme">
+                            <input type="text" class="form-control bg-transparent text-white contact__input" placeholder="Theme">
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="row float-end me-3">
-                        <button type="submit" class="btn btn-light mx-3 text-danger">Send</button>
+                        <button type="submit" class="btn btn-light mx-3 text-danger contact__btn">Send</button>
                     </div>
                 </form>
             </div>
