--- a/pages/guides.html
+++ b/pages/guides.html
@@ -45,9 +45,9 @@
                             the compatibility and provide instructions.</p>
                     </div>
                     <div class="col-lg-4 col-md-8 col-12 d-flex">
-                        <input type="text" class="form-control px-3 py-2 w-75 bg-transparent me-2"
+                        <input type="text" class="form-control contact__input w-75 bg-transparent me-2"
                             placeholder="Write here">
-                        <button class="btn btn-light text-danger w-25 px-3 py-2">Search</button>
+                        <button class="btn btn-light text-danger w-25 contact__input">Search</button>
                     </div>
                 </div>
             </div>
