--- a/pages/login.html
+++ b/pages/login.html
@@ -41,19 +41,19 @@
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./registry.html" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger w-25">Sign Up</button>
+                        <button class="btn btn-light text-danger w-25 contact__btn">Sign Up</button>
                     </a>
                 </div>
                 <form class="col-lg-6 offset-lg-1 col-12">
                     <h1 class="mb-lg-5 mb-3">Login</h1>
                     <div class="row d-flex mb-3">
                         <div class="col-lg-10 col-sm-12">
-                            <input type="text" class="contact__input form-control form-control-lg py-2 bg-transparent text-white" placeholder="Username">
+                            <input type="text" class="contact__input form-control form-control-lg  bg-transparent text-white" placeholder="Username">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-lg-10 col-sm-12">
-                            <input type="password" class="contact__input form-control form-control-lg py-2 bg-transparent text-white" placeholder="Password">
+                            <input type="password" class="contact__input form-control form-control-lg  bg-transparent text-white" placeholder="Password">
                         </div>
                     </div>
 
@@ -66,14 +66,14 @@
                             </label>
                         </div>
                         <div class="col-lg-10 pe-1 mb-2">
-                            <button type="submit" class="btn btn-light text-danger w-100 loginBtn">Sign In</button>
+                            <button type="submit" class="btn btn-light text-danger w-100 loginBtn contact__btn">Sign In</button>
                         </div>
                         <div class="col-lg-10 px-3 text-center mb-2">
                             <p class="or">or</p>
                         </div>
                         <div class="col-lg-10 pe-1 mb-2">
                             <button type="submit"
-                                class="btn btn-light d-flex justify-content-center align-items-center text-danger w-100">
+                                class="btn btn-light d-flex justify-content-center align-items-center text-danger contact__btn w-100">
                                 <img src="../img/microsoft.svg" alt="Microsoft logo" class="me-2"> Continue with
                                 Microsoft</button>
                         </div>
@@ -89,11 +89,11 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-lg-10 col-sm-12">
-                                <input type="number" class="form-control py-2 bg-transparent text-white" placeholder="OTP">
+                                <input type="number" class="form-control contact__input py-2 bg-transparent text-white" placeholder="OTP">
                             </div>
                         </div>
                         <div class="col-lg-10 pe-1 mb-2">
-                            <button type="submit" class="btn btn-light text-danger w-100">Verify</button>
+                            <button type="submit" class="btn btn-light text-danger w-100 contact__btn">Verify</button>
                         </div>
 
 
