--- a/pages/registry.html
+++ b/pages/registry.html
@@ -53,32 +53,32 @@
                     </div>
                     <div class="row d-flex mb-3">
                         <div class="col-12 col-sm-12">
-                            <input type="text" class="form-control py-2 bg-transparent text-white" placeholder="Username">
+                            <input type="text" class="form-control bg-transparent text-white contact__input" placeholder="Username">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12 col-sm-12">
-                            <input type="email" class="form-control py-2 bg-transparent text-white" placeholder="E-mail">
+                            <input type="email" class="form-control bg-transparent text-white contact__input" placeholder="E-mail">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12 col-sm-12">
-                            <input type="password" class="form-control py-2 bg-transparent text-white" placeholder="Password">
+                            <input type="password" class="form-control bg-transparent text-white contact__input" placeholder="Password">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col-12 col-sm-12">
-                            <input type="password" class="form-control py-2 bg-transparent text-white"
+                            <input type="password" class="form-control bg-transparent text-white contact__input"
                                 placeholder="Confirm Password">
                         </div>
                     </div>
                     <div class="row d-flex justify-conten-start">
                         <div class="col-12 mb-2 w-75">
-                            <button type="submit" class="btn btn-light text-danger w-100">Register</button>
+                            <button type="submit" class="btn btn-light text-danger w-100 contact__btn">Register</button>
                         </div>
                         <div class="col-2  mb-2 w-25">
                             <a href="/">
-                                <button type="submit" class="btn btn-trasparent border text-white w-100">Cancel</button>
+                                <button type="submit" class="btn btn-trasparent border text-white w-100 contact__btn">Cancel</button>
                             </a>
                         </div>
 
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col-12 mb-2">
                         <button type="submit"
-                            class="btn btn-light d-flex justify-content-center align-items-center text-danger w-100">
+                            class="btn btn-light d-flex justify-content-center align-items-center text-danger w-100 contact__btn">
                             <img src="../img/microsoft.svg" alt="Microsoft logo" class="me-2"> Continue with
                             Microsoft</button>
                     </div>
@@ -99,7 +99,7 @@
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
                     <a href="./login.html" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger w-25">Sign In</button>
+                        <button class="btn btn-light text-danger w-25 contact__btn">Sign In</button>
                     </a>
                 </div>
             </div>
