--- a/pages/faq.html
+++ b/pages/faq.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- styles -->
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="../css/faq.css">
     <script src="../js/jquery.min.js"></script>
 </head>
 
@@ -35,7 +34,7 @@
         <!-- FAQ Page  -->
         <main class="container">
             <div class="row my-5">
-                <div class="col-12 text-white">
+                <div class="col-12 ms-2 text-white">
                     <h1>FAQ</h1>
                 </div>
             </div>
