--- a/pages/tools.html
+++ b/pages/tools.html
@@ -92,7 +92,7 @@
     </header>
     <main class="container">
         <div class="row mb-lg-5 mb-5 mx-auto">
-            <div class="col-12 bg-white mtt-encriment rounded p-lg-4 p-3">
+            <div class="col-12 bg-white  rounded p-lg-4 p-3">
                 <div class="table-responsive">
                     <table class="table" style="min-width:1000px;">
                         <h4 class="fw-semibold">FIDO2 Keys</h4>
