--- a/pages/login.html
+++ b/pages/login.html
@@ -34,17 +34,17 @@
         </div>
         <!-- Login Page  -->
         <main class="container">
-            <div class="row mt-5 p-lg-5 p-sm-3 pt-5 text-white">
-                <div class="col-lg-5 col-sm-12 d-flex flex-column mb-4">
+            <div class="row mt-5 pt-md-5 text-white">
+                <div class="col-lg-6 col-xl-5 col-sm-12 d-flex flex-column mb-4">
                     <h1 class="mb-lg-3">Not Registered yet?</h1>
-                    <h4 class="mb-lg-5 fw-light" style="font-size: 15px; font-family: 'Open Sans'; line-height: 30px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                    <h4 class="mb-lg-5 mb-4 fw-light" style="font-size: 15px; font-family: 'Open Sans'; line-height: 30px;">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                         accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
                         veritatis et quasi architecto beatae vitae dicta sunt explicabo.</h4>
-                    <a href="./registry.html" class="fs-5 mb-lg-2">
-                        <button class="btn btn-light text-danger w-25 contact__btn">Sign Up</button>
+                    <a href="./registry.html" style="width: max-content;" class="fs-5 mb-lg-2">
+                        <button class="btn btn-light text-danger contact__btn">Sign Up</button>
                     </a>
                 </div>
-                <form class="col-lg-6 offset-lg-1 col-12">
+                <form class="col-lg-6 offset-xl-1 col-12 my-4 my-lg-0">
                     <h1 class="mb-lg-5 mb-3">Login</h1>
                     <div class="row d-flex mb-3">
                         <div class="col-lg-10 col-sm-12">
