--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,26 +38,33 @@
                 <div class="col-lg-6 col-sm-12 d-flex flex-column mb-4">
                     <h1 class="mb-lg-3">Contact information</h1>
                     <hr class="w-25 mb-lg-4" style="height: 4px;background-color: white; opacity: 1;">
-                    <h4 class="mb-lg-5 fw-light">Fill up the form and our Team will get back to you with 25 hours.</h4>
-                    <a href="mailto:info@token2.com" class="fs-5 mb-lg-2"><i
+                    <h4 class="mb-lg-5 mb-4 fw-light">Fill up the form and our Team will get back to you with 25 hours.
+                    </h4>
+                    <a href="mailto:info@token2.com" class="fs-5 mb-lg-2" style="width: max-content;"><i
                             class="fa-solid fa-envelope me-lg-4 me-2"></i>info@token2.com</a>
-                    <a href="tel:+16012015580" class="fs-5 mb-lg-2"><i class="fa-solid fa-phone me-lg-4 me-2"></i></i>+1
+                    <a href="tel:+16012015580" class="fs-5 mb-lg-2" style="width: max-content;"><i
+                            class="fa-solid fa-phone me-lg-4 me-2"></i></i>+1
                         601-201-5580</a>
-                    <a href="https://goo.gl/maps/a2UP6TpRZYtJjBDh7" target="_blank" class="fs-5 mb-lg-2"><i
-                            class="fa-solid fa-location-dot me-lg-4 me-2"></i></i></i>1642 Washington Ave, Jackson, MS</a>
+                    <a href="https://goo.gl/maps/a2UP6TpRZYtJjBDh7" target="_blank" class="fs-5 mb-lg-2"
+                        style="width: max-content;"><i class="fa-solid fa-location-dot me-lg-4 me-2"></i></i></i>1642
+                        Washington Ave, Jackson,
+                        MS</a>
                 </div>
                 <form class="col-lg-6 col-sm-12">
                     <div class="row d-flex ">
                         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
-                            <input type="text" class="form-control bg-transparent text-white contact__input" placeholder="Your name">
+                            <input type="text" class="form-control bg-transparent text-white contact__input"
+                                placeholder="Your name">
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <input type="email" class="form-control bg-transparent text-white contact__input" placeholder="Your email">
+                        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                            <input type="email" class="form-control bg-transparent text-white contact__input"
+                                placeholder="Your email">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <div class="col">
-                            <input type="text" class="form-control bg-transparent text-white contact__input" placeholder="Theme">
+                            <input type="text" class="form-control bg-transparent text-white contact__input"
+                                placeholder="Theme">
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -78,9 +85,9 @@
         <!-- Import subscribe using Jquery you can remove subscribe__loader during backend process  -->
         <div class="subscribe__loader">
             <script>
-                 $(document).ready(function () {
-                     $('.subscribe__loader').load("../components/subscribe.html");
-                 });
+                $(document).ready(function () {
+                    $('.subscribe__loader').load("../components/subscribe.html");
+                });
             </script>
         </div>
         <!--  -->
