--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,7 @@
             </script>
         </div>
         <!-- Contact Page  -->
-        <main class="container">
+        <div class="container">
             <div class="row mt-5 px-lg-5 pt-md-5 text-white">
                 <div class="col-lg-6 col-sm-12 d-flex flex-column mb-4">
                     <h1 class="mb-lg-3">Contact information</h1>
@@ -78,7 +78,7 @@
                     </div>
                 </form>
             </div>
-        </main>
+        </div>
     </header>
     <!-- Personal Infos -->
     <main class="main about__main">
