--- a/pages/processing_orders.html
+++ b/pages/processing_orders.html
@@ -33,7 +33,7 @@
             </script>
         </div>
         <!--Personal Page Prosessing Orders  -->
-        <main class="container">
+        <div class="container">
             <div class="row float-end mb-3">
                 <div class="col d-flex">
                     <h2 class="text-white me-3">Hi! Chingiz Ahmadov</h2>
@@ -81,11 +81,11 @@
                     </li>
                 </ul>
             </div>
-        </main>
+        </div>
     </header>
     <!-- Orders -->
-    <main class="my-4">
-        <div class="container">
+    <main class="main">
+        <div class="container my-4">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
                 <div class="col-12 bg-white p-5 rounded mb-4 mt-encriment">
@@ -293,9 +293,6 @@
                 </div>
             </div>
         </div>
-    </main>
-
-    <main class="main about__main">
         <!-- Import subscribe using Jquery you can remove subscribe__loader during backend process  -->
         <div class="subscribe__loader">
             <script>
