--- a/pages/registry.html
+++ b/pages/registry.html
@@ -33,7 +33,7 @@
             </script>
         </div>
         <!-- Login Page  -->
-        <main class="container">
+        <div class="container">
             <div class="row mt-5 py-md-3 pb-4 text-white">
                 <form class="col-xl-5 col-lg-6 col-sm-12 mt-5 mt-lg-0">
                     <h1 class="mb-lg-4 mb-3">Register</h1>
@@ -106,10 +106,10 @@
                     </a>
                 </div>
             </div>
-        </main>
+        </div>
     </header>
     <!-- Personal Infos -->
-    <main class="main about__main">
+    <main class="main">
         <!-- Import subscribe using Jquery you can remove subscribe__loader during backend process  -->
         <div class="subscribe__loader">
             <script>
