--- a/pages/tools.html
+++ b/pages/tools.html
@@ -33,7 +33,7 @@
             </script>
         </div>
         <!-- Guides Page  -->
-        <main class="container my-5">
+        <div class="container my-5">
             <div class="row mt-lg-5 mt-3 pt-lg-5 pt-3">
                 <div class="col-12 text-white mb-lg-3">
                     <h1 class="mb-4 col-lg-6 col-sm-12">Tools for hardware tokens and security keys</h1>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
     </header>
     <main class="main">
         <div class="container">
