--- a/pages/completed_orders.html
+++ b/pages/completed_orders.html
@@ -33,7 +33,7 @@
             </script>
         </div>
         <!--Personal Page Completed Orders  -->
-        <main class="container">
+        <div class="container">
             <div class="row float-end mb-3">
                 <div class="col d-flex">
                     <h2 class="text-white me-3">Hi! Chingiz Ahmadov</h2>
@@ -45,7 +45,8 @@
             <div class="row w-100">
                 <div class="col-sm-12 col-md-12 col-lg-6">
                     <h1 class="text-white display-5 fw-bold mb-lg-5 mb-md-3 mb-2">Completed Orders</h1>
-                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2" style="text-align: justify;">We have solutions that can integrate with almost any system, below
+                    <p class="lh-lg text-white mb-lg-4 mb-4 pb-sm-2" style="text-align: justify;">We have solutions that
+                        can integrate with almost any system, below
                         is the list of integration
                         guides with different systems published so far, and it is far from being exhaustive. Feel free
                         to contact us if you cannot find your desired product in the list below, we will check the
@@ -81,11 +82,12 @@
                     </li>
                 </ul>
             </div>
-        </main>
+        </div>
     </header>
     <!-- Orders -->
-    <main class="my-4">
-        <div class="container">
+
+    <main class="main">
+        <div class="container my-4">
             <div class="row w-100 mx-auto">
                 <!-- Order N:1 -->
                 <div class="col-12 bg-white p-5 rounded mb-4 mt-encriment">
@@ -114,7 +116,8 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
+                        <ul
+                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
                             <li
                                 class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
@@ -229,7 +232,8 @@
                                 </b></p>
                         </div>
                         <!-- Order Progress -->
-                        <ul class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
+                        <ul
+                            class="ms-lg-5 col-lg-9 col-md-12 col-sm-12 line position-relative d-flex justify-content-evenly align-items-center">
                             <li
                                 class="rounded-circle p-lg-3 p-2 text-white d-flex justify-content-center align-items-center">
                                 <i class="fs-lg-4 fs-6 fa-solid fa-check"></i>
@@ -291,9 +295,6 @@
                 </div>
             </div>
         </div>
-    </main>
-
-    <main class="main about__main">
         <!-- Import subscribe using Jquery you can remove subscribe__loader during backend process  -->
         <div class="subscribe__loader">
             <script>
