--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -64,13 +64,13 @@
                                     <td>
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-minus">
+                                                data-toggle="minus" id="checkout-minus">
                                                 <i class="fa-regular fa-dash"></i>
                                             </button>
                                             <input type="number" class="form-control checkout_amount_input text-center"
                                                 value="5" pattern="[0-9]*" min="0" required>
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-plus">
+                                                data-toggle="plus" id="checkout-plus">
                                                 <i class="fa-regular fa-plus-large"></i>
                                             </button>
                                         </div>
@@ -92,13 +92,13 @@
                                     <td>
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-minus">
+                                                data-toggle="minus" id="checkout-minus">
                                                 <i class="fa-regular fa-dash"></i>
                                             </button>
                                             <input type="number" class="form-control checkout_amount_input text-center"
                                                 value="5" pattern="[0-9]*" min="0" required>
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-plus">
+                                                data-toggle="plus" id="checkout-plus">
                                                 <i class="fa-regular fa-plus-large"></i>
                                             </button>
                                         </div>
@@ -120,13 +120,13 @@
                                     <td>
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-minus">
+                                                data-toggle="minus" id="checkout-minus">
                                                 <i class="fa-regular fa-dash"></i>
                                             </button>
                                             <input type="number" class="form-control checkout_amount_input text-center"
                                                 value="5" pattern="[0-9]*" min="0" required>
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-plus">
+                                                data-toggle="plus" id="checkout-plus">
                                                 <i class="fa-regular fa-plus-large"></i>
                                             </button>
                                         </div>
@@ -148,13 +148,13 @@
                                     <td>
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-minus">
+                                                data-toggle="minus" id="checkout-minus">
                                                 <i class="fa-regular fa-dash"></i>
                                             </button>
                                             <input type="number" class="form-control checkout_amount_input text-center"
                                                 value="5" pattern="[0-9]*" min="0" required>
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-plus">
+                                                data-toggle="plus" id="checkout-plus">
                                                 <i class="fa-regular fa-plus-large"></i>
                                             </button>
                                         </div>
@@ -176,13 +176,13 @@
                                     <td>
                                         <div class="d-flex">
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-minus">
+                                                data-toggle="minus" id="checkout-minus">
                                                 <i class="fa-regular fa-dash"></i>
                                             </button>
                                             <input type="number" class="form-control checkout_amount_input text-center"
                                                 value="5" pattern="[0-9]*" min="0" required>
                                             <button class="btn checkout_count_btn btn__square white_to_red_btn"
-                                                id="checkout-plus">
+                                                data-toggle="plus" id="checkout-plus">
                                                 <i class="fa-regular fa-plus-large"></i>
                                             </button>
                                         </div>
@@ -205,7 +205,8 @@
                     <div class="checkout__footer between_center flex-wrap gap-2">
                         <h6 class="checkout_total_text fw-bold m-0">Total</h6>
                         <div class="d-flex flex-wrap gap-2">
-                            <a href="./products.html" class="btn checkout__btn px-md-5 btn-outline-danger btn-lg">Continue
+                            <a href="./products.html"
+                                class="btn checkout__btn px-md-5 btn-outline-danger btn-lg">Continue
                                 shopping</a>
                             <button class="btn checkout__btn checkout_pay_btn btn-danger btn-lg">Pay: €740.
                                 <span class="pay_btn_points">00</span></button>
