--- a/pages/product.html
+++ b/pages/product.html
@@ -47,10 +47,13 @@
                         <p class="products_content_header_text">TOTPRadius</p>
                     </div>
                 </div>
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+                <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">FIDO2 Keys</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">T2F2-NFC-Slim FIDO2 Security key</li>
+                        <li class="breadcrumb-item"><a href="#" class="fs-5">
+                            FIDO2 Keys
+                            <i class="fa-regular fa-chevron-right ms-1"></i>
+                        </a></li>
+                        <li class="breadcrumb-item active fs-5" aria-current="page">T2F2-NFC-Slim FIDO2 Security key</li>
                     </ol>
                 </nav>
             </section>
@@ -267,7 +270,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="product__details col-md-12 col-lg-6 section__content mt-md-0 mt-4">
+                <div class="product__details col-md-12 col-lg-6 section__content mt-md-0 mt-4 pe-md-4">
                     <div class="product_about_header between_center position-sticky">
                         <h3 class="product_about_title">T2F2-NFC-Slim FIDO2 Security key</h3>
                         <div class="product_details_btns between_center">
